fixing crud and realizing social buttons

--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/socials.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/socials.phtml
@@ -5,9 +5,9 @@
  */
 ?>
 <?php if ($block->displaySocialsOn()) : ?>
-<div class="socialauth_container">
+<div class="wk_socialsignup_container">
     <?php if ($block->isAnySocialEnabled()) : ?>
-        <div class="socialauth_title">
+        <div class="wk_social_choice">
             <h3>
                 <?= $escaper->escapeHtml(__("Login With Social Media")) ?>
             </h3>
@@ -16,7 +16,7 @@
 
     <?php if (!$block->ifCustomerLogin()) : ?>
         <?php if ($block->configHelper->getFacebookStatus() == 1) : ?>
-            <div  id="facebook_login" class="socialauth_buttons">
+            <div  id="fblogin" class="fblogin wksocialsignup fb_button_ps">
                 <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('facebook'))?>"
                      alt="<?= $escaper->escapeHtml(__('Facebook'))?>"
                      title="<?= $escaper->escapeHtml(__('Connect with Facebook'))?>"/>
@@ -24,7 +24,7 @@
         <?php endif ?>
 
         <?php if ($block->configHelper->getTwitterStatus() == 1) : ?>
-            <div  id="twitter_login" class="socialauth_buttons">
+            <div  id="twitterlogin" class="twitterlogin wksocialsignup">
                 <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('twitter'))?>"
                      alt="<?= $escaper->escapeHtml(__('Twitter'))?>"
                      title="<?= $escaper->escapeHtml(__('Connect with Twitter'))?>" />
@@ -32,7 +32,7 @@
         <?php endif; ?>
 
         <?php if ($block->configHelper->getGoogleStatus() == 1) : ?>
-            <div id="google_login" class="socialauth_buttons">
+            <div id="googlelogin" class="googlelogin wksocialsignup">
                 <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('google'))?>"
                      alt="<?= $escaper->escapeHtml(__('Google')) ?>"
                      title="<?= $escaper->escapeHtml(__('Connect with Google')) ?>">
@@ -40,7 +40,7 @@
         <?php endif; ?>
 
         <?php if ($block->configHelper->getLinkedinStatus() == 1) : ?>
-            <div  id="linkedin_login" class="socialauth_buttons">
+            <div  id="linkedinlogin" class="linkedinlogin wksocialsignup">
                 <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('linkedin'))?>"
                      alt="<?= $escaper->escapeHtml(__('LinkedIn'))?>"
                      title="<?= $escaper->escapeHtml(__('Connect with LinkedIn'))?>" />
@@ -48,7 +48,7 @@
         <?php endif; ?>
 
         <?php if ($block->configHelper->getInstagramStatus() == 1) : ?>
-            <div  id="instagram_login" class="socialauth_buttons">
+            <div  id="instagramlogin" class="instagramlogin wksocialsignup">
                 <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('instagram'))?>"
                      alt="<?= $escaper->escapeHtml(__('Instagram'))?>"
                      title="<?= $escaper->escapeHtml(__('Connect with Instagram'))?>" />
@@ -58,31 +58,11 @@
 </div>
 <?php endif; ?>
 
-<?php
-$data = [
-    "fbAppId" => $block->configHelper->getFacebookAppId(),
-    "uId" => $block->getFacebookUserId(),
-    "customerSession" => $block->ifCustomerLogin(),
-    "localeCode" => $block->getLocaleCode(),
-    "fbLoginUrl" => $block->getUrl('socialsignup/facebook/login')
-];
-$popupData = [
-    "width"=>'700',
-    "height" => '300',
-    "twitterUrl" => $block->getRequestUrl('socialsignup/twitter/request', ['mainw_protocol'=>'http']),
-    "linkedinUrl" => $block->getRequestUrl('socialsignup/linkedin/request', ['mainw_protocol'=>'http']),
-    "googleUrl" => $block->getRequestUrl('socialsignup/google/request', ['mainw_protocol'=>'http']),
-    "instagramUrl" => $block->getRequestUrl('socialsignup/instagram/request', ['mainw_protocol'=>'http'])
-];
-$serializedData = $block->jsonEncode($data);
-$serializedPopupData = $block->jsonEncode($popupData);
-?>
-
 <script type="text/x-magento-init">
     {
         "*":{
-            "fbBlockPlugin":<?= /* @noEscape */ $serializedData; ?>,
-            "popupPlugin":<?= /* @noEscape */ $serializedPopupData; ?>
+            "fbBlockPlugin":<?= /* @noEscape */ $block->getFacebookBlockData(); ?>,
+            "popupPlugin":<?= /* @noEscape */ $block->getPopupData(); ?>
     }
 }
 </script>
