code refactoring, realizing first part of js file refactoring for social login from checkout

--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/window-close.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/window-close.phtml
@@ -4,7 +4,12 @@
  * @var $escaper \Magento\Framework\Escaper
  */
 ?>
+<?php $redirect = $block->getRedirectLink(); ?>
 <script type='text/javascript'>
+    <?php if ($redirect === 'reload'): ?>
+    window.opener.location.reload(true);
+    <?php else: ?>
     window.opener.location.replace('<?= $escaper->escapeUrl($block->getRedirectLink()); ?>');
+    <?php endif; ?>
     window.close();
 </script>
