code refactoring, realizing second part of logic for authorization from checkout

--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/product/product_share.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/product/product_share.phtml
@@ -9,13 +9,13 @@
     $product = $block->getCurrentProduct();
     $productName = urlencode($product->getName());
     $productUrl = urlencode($product->getProductUrl());
-    $_sty = "width=640,height=480,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes";
+    $style = "width=640,height=480,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes";
 ?>
-    <div class="wk-social-media-icons">
+    <div class="social-media-icons">
         <a href="<?=
         $escaper->escapeUrl("https://www.facebook.com/sharer/sharer.php?u=" . $productUrl . "&t=" . $productName);
         ?>"
-           onclick='javascript:window.open(this.href, "" ,"<?= $block->escapeHtml($_sty); ?>"); return false'
+           onclick='javascript:window.open(this.href, "" ,"<?= $escaper->escapeHtml($style); ?>"); return false'
            title="Share Facebook">
             <img src="<?=
             $escaper->escapeUrl($block->getViewFileUrl('Barwenock_SocialAuth::images/facebook.png'));
@@ -26,7 +26,7 @@
         <a href="<?=
         $escaper->escapeUrl("https://twitter.com/intent/tweet?url=" . $productUrl . $productName);
         ?>"
-           onclick='javascript:window.open(this.href, "" ,"<?= $block->escapeHtml($_sty); ?>"); return false'
+           onclick='javascript:window.open(this.href, "" ,"<?= $escaper->escapeHtml($style); ?>"); return false'
            title="Share Twitter">
             <img src="<?=
             $escaper->escapeUrl($block->getViewFileUrl('Barwenock_SocialAuth::images/twitter.png'));
@@ -35,7 +35,7 @@
         </a>
 
         <a href="<?= $escaper->escapeUrl("https://www.linkedin.com/share?url=" . $productUrl); ?>"
-           onclick='javascript:window.open(this.href, "", "<?= $block->escapeHtml($_sty); ?>"); return false'
+           onclick='javascript:window.open(this.href, "", "<?= $escaper->escapeHtml($style); ?>"); return false'
            title="Share LinkedIn">
             <img src="<?= $escaper->escapeUrl(
                 $block->getViewFileUrl('Barwenock_SocialAuth::images/linkedin.png')
