--- a/app/code/Barwenock/SocialAuth/view/frontend/layout/checkout_index_index.xml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/layout/checkout_index_index.xml
@@ -13,10 +13,10 @@
                             <item name="children" xsi:type="array">
                                 <item name="authentication" xsi:type="array">
                                     <item name="children" xsi:type="array">
-                                        <item name="socialsignup-authentication" xsi:type="array">
+                                        <item name="socialauth-modal" xsi:type="array">
                                             <item name="sortOrder" xsi:type="string">1</item>
                                             <item name="component" xsi:type="string">
-                                                Barwenock_SocialAuth/js/view/form/element/socialsignupAuthentication
+                                                Barwenock_SocialAuth/js/view/form/element/socialauthCheckoutModal
                                             </item>
                                             <item name="displayArea" xsi:type="string">
                                                 additional-login-form-fields
@@ -32,8 +32,8 @@
                                                     <item name="children" xsi:type="array">
                                                         <item name="before-form" xsi:type="array">
                                                             <item name="children" xsi:type="array">
-                                                                <item name="socialsignup" xsi:type="array">
-                                                                    <item name="component" xsi:type="string">Barwenock_SocialAuth/js/view/form/element/socialsignup</item>
+                                                                <item name="socialauth" xsi:type="array">
+                                                                    <item name="component" xsi:type="string">Barwenock_SocialAuth/js/view/form/element/socialauthShippingStep</item>
                                                                 </item>
                                                             </item>
                                                         </item>
@@ -47,8 +47,8 @@
                                                     <item name="children" xsi:type="array">
                                                         <item name="beforeMethods" xsi:type="array">
                                                             <item name="children" xsi:type="array">
-                                                                <item name="socialsignup" xsi:type="array">
-                                                                    <item name="component" xsi:type="string">Barwenock_SocialAuth/js/view/form/element/socialsignupForBilling</item>
+                                                                <item name="socialauth" xsi:type="array">
+                                                                    <item name="component" xsi:type="string">Barwenock_SocialAuth/js/view/form/element/socialauthBillingStep</item>
                                                                 </item>
                                                             </item>
                                                         </item>
