--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/socials.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/socials.phtml
@@ -6,54 +6,53 @@
 ?>
 <?php if ($block->displaySocialsOn()) : ?>
 <div class="socialauth_container">
-    <?php if ($block->isAnySocialEnabled()) : ?>
-        <div class="wk_social_choice">
+    <?php if (!$block->ifCustomerLogin() && $block->isAnySocialEnabled()) : ?>
+        <div class="socialauth_title">
             <h3>
                 <?= $escaper->escapeHtml(__("Login With Social Media")) ?>
             </h3>
         </div>
-    <?php endif; ?>
+        <div class="social_block">
+            <?php if ($block->configHelper->getFacebookStatus() == 1) : ?>
+                <div  id="fblogin" class="fblogin socialauth fb_button_ps">
+                    <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('facebook'))?>"
+                         alt="<?= $escaper->escapeHtml(__('Facebook'))?>"
+                         title="<?= $escaper->escapeHtml(__('Connect with Facebook'))?>"/>
+                </div>
+            <?php endif ?>
 
-    <?php if (!$block->ifCustomerLogin()) : ?>
-        <?php if ($block->configHelper->getFacebookStatus() == 1) : ?>
-            <div  id="fblogin" class="fblogin wksocialsignup fb_button_ps">
-                <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('facebook'))?>"
-                     alt="<?= $escaper->escapeHtml(__('Facebook'))?>"
-                     title="<?= $escaper->escapeHtml(__('Connect with Facebook'))?>"/>
-            </div>
-        <?php endif ?>
+            <?php if ($block->configHelper->getTwitterStatus() == 1) : ?>
+                <div  id="twitter" class="twitter socialauth">
+                    <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('twitter'))?>"
+                         alt="<?= $escaper->escapeHtml(__('Twitter'))?>"
+                         title="<?= $escaper->escapeHtml(__('Connect with Twitter'))?>" />
+                </div>
+            <?php endif; ?>
 
-        <?php if ($block->configHelper->getTwitterStatus() == 1) : ?>
-            <div  id="twitter" class="twitter wksocialsignup">
-                <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('twitter'))?>"
-                     alt="<?= $escaper->escapeHtml(__('Twitter'))?>"
-                     title="<?= $escaper->escapeHtml(__('Connect with Twitter'))?>" />
-            </div>
-        <?php endif; ?>
+            <?php if ($block->configHelper->getGoogleStatus() == 1) : ?>
+                <div id="google" class="google socialauth">
+                    <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('google'))?>"
+                         alt="<?= $escaper->escapeHtml(__('Google')) ?>"
+                         title="<?= $escaper->escapeHtml(__('Connect with Google')) ?>">
+                </div>
+            <?php endif; ?>
 
-        <?php if ($block->configHelper->getGoogleStatus() == 1) : ?>
-            <div id="google" class="google wksocialsignup">
-                <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('google'))?>"
-                     alt="<?= $escaper->escapeHtml(__('Google')) ?>"
-                     title="<?= $escaper->escapeHtml(__('Connect with Google')) ?>">
-            </div>
-        <?php endif; ?>
+            <?php if ($block->configHelper->getLinkedinStatus() == 1) : ?>
+                <div  id="linkedin" class="linkedin socialauth">
+                    <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('linkedin'))?>"
+                         alt="<?= $escaper->escapeHtml(__('LinkedIn'))?>"
+                         title="<?= $escaper->escapeHtml(__('Connect with LinkedIn'))?>" />
+                </div>
+            <?php endif; ?>
 
-        <?php if ($block->configHelper->getLinkedinStatus() == 1) : ?>
-            <div  id="linkedin" class="linkedin wksocialsignup">
-                <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('linkedin'))?>"
-                     alt="<?= $escaper->escapeHtml(__('LinkedIn'))?>"
-                     title="<?= $escaper->escapeHtml(__('Connect with LinkedIn'))?>" />
-            </div>
-        <?php endif; ?>
-
-        <?php if ($block->configHelper->getInstagramStatus() == 1) : ?>
-            <div  id="instagram" class="instagram wksocialsignup">
-                <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('instagram'))?>"
-                     alt="<?= $escaper->escapeHtml(__('Instagram'))?>"
-                     title="<?= $escaper->escapeHtml(__('Connect with Instagram'))?>" />
-            </div>
-        <?php endif; ?>
+            <?php if ($block->configHelper->getInstagramStatus() == 1) : ?>
+                <div  id="instagram" class="instagram socialauth">
+                    <img src="<?= $escaper->escapeUrl($block->getSocialConnectImage('instagram'))?>"
+                         alt="<?= $escaper->escapeHtml(__('Instagram'))?>"
+                         title="<?= $escaper->escapeHtml(__('Connect with Instagram'))?>" />
+                </div>
+            <?php endif; ?>
+        </div>
     <?php endif ?>
 </div>
 <?php endif; ?>
