code refactoring, fixing bug for facebook(redirect to select page in admin)

--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/product/product_share.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/product/product_share.phtml
@@ -9,7 +9,8 @@
     $product = $block->getCurrentProduct();
     $productName = urlencode($product->getName());
     $productUrl = urlencode($product->getProductUrl());
-    $style = "width=640,height=480,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes";
+    $style = "width = 640, height = 480, left = 0, top = 0, location = no, status = yes,
+    scrollbars = yes, resizable = yes";
 ?>
     <div class="social-media-icons">
         <a href="<?=
