adding copyrights & strict types

--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/account/authentication-popup.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/account/authentication-popup.phtml
@@ -1,5 +1,11 @@
 <?php
 /**
+ * @author Barwenock
+ * @copyright Copyright (c) Barwenock
+ * @package Social Authorizes for Magento 2
+ */
+
+/**
  * @var $escaper \Magento\Framework\Escaper
  */
 ?>
