--- a/app/code/Barwenock/SocialAuth/view/frontend/web/template/form/element/socialauthShippingStep.html
+++ b/app/code/Barwenock/SocialAuth/view/frontend/web/template/form/element/socialauthShippingStep.html
@@ -1,3 +1,10 @@
+<!--
+/**
+ * @author Barwenock
+ * @copyright Copyright (c) Barwenock
+ * @package Social Authorizes for Magento 2
+ */
+ -->
 <!-- ko if: (moduleStatus && isCheckoutOn) -->
     <div class="socialauth_container">
         <div id="fb-root"></div>
