--- a/app/code/Barwenock/SocialAuth/view/frontend/web/template/shipping.html
+++ b/app/code/Barwenock/SocialAuth/view/frontend/web/template/shipping.html
@@ -1,3 +1,10 @@
+<!--
+/**
+ * @author Barwenock
+ * @copyright Copyright (c) Barwenock
+ * @package Social Authorizes for Magento 2
+ */
+ -->
 <form class="form form-shipping-address" id="co-shipping-form" data-bind="attr: {'data-hasrequired': $t('* Required Fields')}">
     <!-- ko foreach: getRegion('before-fields') -->
     <!-- ko template: getTemplate() --><!-- /ko -->
