--- a/app/code/Barwenock/SocialAuth/view/frontend/layout/customer_account_login.xml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/layout/customer_account_login.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0"?>
+<!--
+/**
+ * @author Barwenock
+ * @copyright Copyright (c) Barwenock
+ * @package Social Authorizes for Magento 2
+ */
+ -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
