--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/window-close.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/socialauth/window-close.phtml
@@ -1,5 +1,11 @@
 <?php
 /**
+ * @author Barwenock
+ * @copyright Copyright (c) Barwenock
+ * @package Social Authorizes for Magento 2
+ */
+
+/**
  * @var $block \Barwenock\SocialAuth\Block\SocialAuth\Redirect
  * @var $escaper \Magento\Framework\Escaper
  */
