--- a/app/code/Barwenock/SocialAuth/view/frontend/web/css/socialauth.css
+++ b/app/code/Barwenock/SocialAuth/view/frontend/web/css/socialauth.css
@@ -1,3 +1,10 @@
+<!--
+/**
+ * @author Barwenock
+ * @copyright Copyright (c) Barwenock
+ * @package Social Authorizes for Magento 2
+ */
+-->
 .socialauth_buttons {
     margin-left: 5px;
     margin-top: -4px;
