code refactoring with code sniffer part 2

--- a/app/code/Barwenock/SocialAuth/view/frontend/templates/account/authentication-popup.phtml
+++ b/app/code/Barwenock/SocialAuth/view/frontend/templates/account/authentication-popup.phtml
@@ -22,10 +22,10 @@
             },
             "*": {
              "Barwenock_SocialAuth/js/authentication-popup": {
-                   "serializedConfig": <?= $block->getSerializedConfig() ?>,
-                   "socialsConfiguration":<?= $block->getData('socialAuthHelper')->serializeData(
+                   "serializedConfig": <?= /* @noEscape */ $block->getSerializedConfig() ?>,
+                   "socialsConfiguration": <?= /* @noEscape */ $block->getData('socialAuthHelper')->serializeData(
                        $block->getData('socialAuthHelper')->getSocialsConfiguration()
-                    ) ?>
+                   ) ?>
                 }
             }
         }
