--- a/app/code/Barwenock/SocialAuth/view/frontend/web/template/form/element/socialsignupAuthenticationGuestPopupCheckout.html
+++ b/app/code/Barwenock/SocialAuth/view/frontend/web/template/form/element/socialsignupAuthenticationGuestPopupCheckout.html
@@ -10,7 +10,7 @@
         <div id="fb-root-authentication"></div>
         <!-- ko if: !customerSession -->
             <div class="socialauth_title">
-                <h3>Login With Social Media</h3>
+                <h3 data-bind="text: socialTopText"></h3>
             </div>
             <div class="social_block">
                 <!-- ko if: facebookStatus -->
